  uploads.storeEmptyDirectories.
- Added the Bouncy Castle security provider to the suite, increasing the number
  of cipher algorithms available for encrypting files.
- The method S3Service.listObjectsChunked now includes Common Prefixes in the
  result object returned.
- Upgraded HTTPClient library to version 3.1

  * REST S3 Service

- The REST implementation can now automatically cope with RequestTimeTooSkewed
  errors caused by the client computer's clock disagreeing with S3 about the
  current time. If this happens, JetS3t will look up the time according to S3
  and compensate for the difference between the S3 clock and the client's clock.
- Rudimentary upload bandwidth throttling using the jets3t.properties setting
  httpclient.read-throttle, which is specified in KB/s.
- Proxy settings are now configurable via the jets3t.properties settings:
  httpclient.proxy-autodetect, httpclient.proxy-host, httpclient.proxy-port

  * Multi-threaded Service
  
- Administration actions can have more threads assigned than upload/download 
  actions with the new configuration setting s3service.admin-max-thread-count.
  These connections run much faster with more threads and as they are light 
  weight they less likely to fail with higher thread counts.
- Fixed S3ServiceSimpleMulti class to work with download sets larger than the
  number of available HTTP connections. Objects' data is now cached in temp
  files automatically.
- The S3ServiceMulti@downloadObjects methods will restore the original last 
  modified date of downloaded objects if the downloads.restoreLastModifiedDate
  configuration property is set to true. As these methods are used by the JetS3t
  applications, setting this property to true will allow file dates to be 
  retained across synchronizations performed by Cockpit and Synchronize. 
  The original last modified date must be available in the object's metadata
  item named "jets3t-original-file-date-iso8601".


PATCH KUDOS: